--- a/SQLTableComparison/SQLTableComparison.csproj
+++ b/SQLTableComparison/SQLTableComparison.csproj
@@ -62,11 +62,11 @@
     <Compile Include="ConfigurationForm.Designer.cs">
       <DependentUpon>ConfigurationForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="GetSQLTable.cs" />
+    <Compile Include="Connection.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResultsContext.cs" />
-    <Compile Include="TestSqlConnection.cs" />
+    <Compile Include="Retrieve.cs" />
     <EmbeddedResource Include="ConfigurationForm.resx">
       <DependentUpon>ConfigurationForm.cs</DependentUpon>
     </EmbeddedResource>
